# tt15_YOLO

./: .gitignore  README.md  auto_follow.sh
tt15_ws/src/auto_follow/: CMakeLists.txt  package.xml
tt15_ws/src/auto_follow/include/auto_follow/: people_detector.h  reactive_controller.h
tt15_ws/src/auto_follow/include/auto_follow/collision_avoidance/: configuration_layer.h  configuration_utils.h
tt15_ws/src/auto_follow/launch/: auto_follow.launch
tt15_ws/src/auto_follow/param/: auto_follow_controller_params.yaml
tt15_ws/src/auto_follow/rviz/: auto_follow.rviz
tt15_ws/src/auto_follow/src/: follow_controller.cpp  people_detector.cpp  people_detector_node.cpp  reactive_controller.cpp  visual_controll.cpp
tt15_ws/src/auto_follow/src/collision_avoidance/: configuration_layer.cpp
tt15_ws/src/tt15_bringup/: CMakeLists.txt  package.xml
tt15_ws/src/tt15_bringup/launch/: tt15_bringup.launch
tt15_ws/src/tt15_description/: CMakeLists.txt  package.xml
tt15_ws/src/tt15_description/config/: joint_names_TT15.yaml
tt15_ws/src/tt15_description/launch/: display.launch  gazebo.launch
tt15_ws/src/tt15_description/meshes/: Laser_Link.STL  left_wheel_link.STL  right_wheel_Link.STL
tt15_ws/src/tt15_description/rviz/: tt15_description.rviz
tt15_ws/src/tt15_description/urdf/: tt15_description.csv  tt15_description.urdf  tt15_description.urdf.xacro  tt15_robot.urdf.xacro
tt15_ws/src/tt15_driver/: CMakeLists.txt  package.xml
tt15_ws/src/tt15_driver/include/: tt15_linux_serial.h
tt15_ws/src/tt15_driver/launch/: logitech.launch
tt15_ws/src/tt15_driver/scripts/: mbot_teleop.py  velocity_publisher.py
tt15_ws/src/yolov5_ros/: package.xml
tt15_ws/src/yolov5_ros_msgs/: package.xml
(+11 files in other folders)
